fix 4 - unit testing